kubernetes/gke-prow/prow/statusreconciler.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: statusreconciler
  labels:
    app: statusreconciler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statusreconciler
  template:
    metadata:
      labels:
        app: statusreconciler
    spec:
      serviceAccountName: statusreconciler
      terminationGracePeriodSeconds: 180
      containers:
      - name: statusreconciler
        image: us-docker.pkg.dev/k8s-infra-prow/images/status-reconciler:v20261008-e012f2883
        imagePullPolicy: Always
        args:
        - --dry-run=false
        - --continue-on-error=true
        - --plugin-config=/etc/plugins/plugins.yaml
        - --config-path=/etc/config/config.yaml
        - --github-app-id=$(GITHUB_APP_ID)
        - --github-app-private-key-path=/etc/github/key.pem
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --job-config-path=/etc/job-config
        - --denylist=kubernetes/kubernetes
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 300m
            memory: 1000Mi
        volumeMounts:
        - name: github
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
        - name: plugins
          mountPath: /etc/plugins
          readOnly: true
      volumes:
      - name: github
        secret:
          secretName: github-credentials
          items:
            - key: app_private_key
              path: key.pem
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
      - name: plugins
        configMap:
          name: plugins
