kubernetes/gke-prow/prow/cherrypicker.yaml
# Copyright 2021 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cherrypicker
  labels:
    app: cherrypicker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: cherrypicker
  template:
    metadata:
      labels:
        app: cherrypicker
    spec:
      serviceAccountName: ""
      serviceAccount: ""
      terminationGracePeriodSeconds: 180
      containers:
      - name: cherrypicker
        image: us-docker.pkg.dev/k8s-infra-prow/images/cherrypicker:v20261001-6844e439e
        imagePullPolicy: Always
        args:
        - --github-token-path=/etc/github/token
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --dry-run=false
        resources:
          requests:
            cpu: 300m
            memory: 2000Mi
          limits:
            cpu: 1000m
            memory: 4000Mi
        ports:
          - name: http
            containerPort: 8888
        volumeMounts:
        - name: hmac
          mountPath: /etc/webhook
          readOnly: true
        - name: github-token
          mountPath: /etc/github
          readOnly: true
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
      - name: hmac
        secret:
          secretName: hmac-token
      - name: github-token
        secret:
          secretName: k8s-infra-cherrypick-robot-github-token
---
apiVersion: v1
kind: Service
metadata:
  name: cherrypicker
spec:
  selector:
    app: cherrypicker
  ports:
  - port: 80
    targetPort: 8888
  type: ClusterIP
