kubernetes/gke-prow/prow/ghproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: ghproxy
  labels:
    app: ghproxy
spec:
  selector:
    matchLabels:
      app: ghproxy
  replicas: 1 # TODO(fejta): this should be HA
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ghproxy
    spec:
      containers:
        - name: ghproxy
          image: us-docker.pkg.dev/k8s-infra-prow/images/ghproxy:v20261001-6844e439e
          args:
            - --cache-dir=/cache
            - --cache-sizeGB=99
            - --serve-metrics=true
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 300m
              memory: 2000Mi
          ports:
            - name: main
              containerPort: 8888
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - name: cache
              mountPath: /cache
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: ghproxy
      # run on our dedicated node
      # tolerations:
      # - key: "dedicated"
      #   operator: "Equal"
      #   value: "ghproxy"
      #   effect: "NoSchedule"
      # nodeSelector:
      #   dedicated: "ghproxy"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghproxy
  namespace: default
  name: ghproxy
spec:
  ports:
    - name: main
      port: 80
      protocol: TCP
      targetPort: 8888
    - name: metrics
      port: 9090
  selector:
    app: ghproxy
  type: ClusterIP
