kubernetes/gke-prow/prow/halogen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: halogen
  namespace: default
  labels:
    app: halogen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: halogen
  template:
    metadata:
      labels:
        app: halogen
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: halogen
      containers:
      - name: halogen
        image: gcr.io/k8s-staging-test-infra/analyze:v20240801-a5d9345e59
        args:
        - --project=k8s-prow
        - --region=us-central1
        - --model=TCN3936569386298507264
        - --port=8888
        ports:
        - name: http
          containerPort: 8888
        # name: metrics
        # containerPort: 9090
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8888
          initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: halogen
  namespace: default
  name: halogen
spec:
  selector:
    app: halogen
  ports:
  - name: main
    port: 80
    targetPort: 8888
    protocol: TCP
  # name: metrics
  # port: 9090
  # protocol: TCP
