kubernetes/gke-prow/prow/needs-rebase.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: needs-rebase
  labels:
    app: needs-rebase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: needs-rebase
  template:
    metadata:
      labels:
        app: needs-rebase
    spec:
      terminationGracePeriodSeconds: 180
      containers:
      - name: needs-rebase
        image: us-docker.pkg.dev/k8s-infra-prow/images/needs-rebase:v20261001-6844e439e
        imagePullPolicy: Always
        args:
        - --dry-run=false
        - --github-app-id=$(GITHUB_APP_ID)
        - --github-app-private-key-path=/etc/github/key.pem
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --update-period=3h
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 200m
            memory: 1000Mi
        ports:
          - name: http
            containerPort: 8888
        volumeMounts:
        - name: hmac
          mountPath: /etc/webhook
          readOnly: true
        - name: github
          mountPath: /etc/github
          readOnly: true
        - name: plugins
          mountPath: /etc/plugins
          readOnly: true
      volumes:
      - name: hmac
        secret:
          secretName: hmac-token
      - name: github
        secret:
          secretName: github-credentials
          items:
            - key: app_private_key
              path: key.pem
      - name: plugins
        configMap:
          name: plugins
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: needs-rebase
spec:
  selector:
    app: needs-rebase
  ports:
  - port: 80
    targetPort: 8888
