kubernetes/gke-prow/prow/sinker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: sinker
  labels:
    app: sinker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sinker
  template:
    metadata:
      labels:
        app: sinker
    spec:
      serviceAccountName: sinker
      containers:
        - name: sinker
          args:
            - --config-path=/etc/config/config.yaml
            - --job-config-path=/etc/job-config
            - --dry-run=false
          image: us-docker.pkg.dev/k8s-infra-prow/images/sinker:v20261008-e012f2883
          resources:
            requests:
              cpu: 100m
              memory: 2000Mi
            limits:
              cpu: 1000m
              memory: 4000Mi
          ports:
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - mountPath: /etc/kubeconfig-k8s-infra-prow
              name: kubeconfig-k8s-infra-prow
              readOnly: true
            - mountPath: /etc/kubeconfig-k8s-infra-prow-build
              name: kubeconfig-k8s-infra-prow-build
              readOnly: true
            - mountPath: /etc/kubeconfig-k8s-infra-prow-build-trusted
              name: kubeconfig-k8s-infra-prow-build-trusted
              readOnly: true
            - mountPath: /etc/kubeconfig-k8s-infra-aks-prow-build
              name: kubeconfig-k8s-infra-aks-prow-build
              readOnly: true
            - mountPath: /etc/kubeconfig-eks-prow-build-cluster
              name: kubeconfig-eks-prow-build-cluster
              readOnly: true
            - mountPath: /etc/kubeconfig-k8s-infra-kops-prow-build
              name: kubeconfig-k8s-infra-kops-prow-build
              readOnly: true
            - mountPath: /etc/k8s-infra-ppc64le-prow-build-kubeconfig
              name: kubeconfig-k8s-infra-ppc64le-prow-build
              readOnly: true
            - mountPath: /etc/k8s-infra-s390x-prow-build-kubeconfig
              name: kubeconfig-k8s-infra-s390x-prow-build
              readOnly: true
            - name: config
              mountPath: /etc/config
              readOnly: true
            - name: job-config
              mountPath: /etc/job-config
              readOnly: true
            # AWS IAM token needed to assume role to access the prow-build-cluster EKS cluster.
            - name: aws-iam-token
              mountPath: /var/run/secrets/aws-iam-token/serviceaccount
              readOnly: true
            # Azure Token needed for workload identity
            - name: azure-token
              mountPath: "/var/run/secrets/azure-token/serviceaccount"
              readOnly: true
      volumes:
        - name: kubeconfig-k8s-infra-prow
          secret:
            defaultMode: 420
            secretName: kubeconfig-k8s-infra-prow
        - name: kubeconfig-k8s-infra-prow-build
          secret:
            defaultMode: 420
            secretName: kubeconfig-k8s-infra-prow-build
        - name: kubeconfig-k8s-infra-prow-build-trusted
          secret:
            defaultMode: 420
            secretName: kubeconfig-k8s-infra-prow-build-trusted
        - name: kubeconfig-k8s-infra-aks-prow-build
          secret:
            defaultMode: 420
            secretName: kubeconfig-k8s-infra-aks-prow-build
        - name: kubeconfig-eks-prow-build-cluster
          secret:
            defaultMode: 420
            secretName: kubeconfig-eks-prow-build-cluster
        - name: kubeconfig-k8s-infra-kops-prow-build
          secret:
            defaultMode: 420
            secretName: kubeconfig-k8s-infra-kops-prow-build
        - name: kubeconfig-k8s-infra-ppc64le-prow-build
          secret:
            defaultMode: 420
            secretName: kubeconfig-k8s-infra-ppc64le-prow-build
        - name: kubeconfig-k8s-infra-s390x-prow-build
          secret:
            defaultMode: 420
            secretName: kubeconfig-k8s-infra-s390x-prow-build
        - name: config
          configMap:
            name: config
        - name: job-config
          configMap:
            name: job-config
        # AWS IAM token needed to assume role to access the prow-build-cluster EKS cluster.
        - name: aws-iam-token
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  audience: sts.amazonaws.com
                  expirationSeconds: 86400
                  path: token
        # Azure Token needed for workload identity
        - name: azure-token
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  expirationSeconds: 86400
                  path: token
                  audience: api://AzureADTokenExchange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sinker
  namespace: default
  name: sinker
spec:
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
  selector:
    app: sinker
