kubernetes/gke-prow/prow/tide.yaml
# Copyright 2017 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: tide
  labels:
    app: tide
spec:
  replicas: 1 # Do not scale up.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tide
  template:
    metadata:
      labels:
        app: tide
    spec:
      serviceAccountName: tide
      containers:
      - name: tide
        image: us-docker.pkg.dev/k8s-infra-prow/images/tide:v20261001-6844e439e
        args:
        - --dry-run=false
        - --github-app-id=$(GITHUB_APP_ID)
        - --github-app-private-key-path=/etc/github/key.pem
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --config-path=/etc/config/config.yaml
        - --job-config-path=/etc/job-config
        - --history-uri=gs://kubernetes-ci-logs/tide-history.json
        - --status-path=gs://kubernetes-ci-logs/tide-status-checkpoint.yaml
        resources:
          requests:
            cpu: 300m
            memory: 2000Mi
          limits:
            cpu: 1000m
            memory: 4000Mi
        ports:
        - name: http
          containerPort: 8888
        - name: metrics
          containerPort: 9090
        volumeMounts:
        - name: github
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: job-config
          mountPath: /etc/job-config
          readOnly: true
      volumes:
      - name: github
        secret:
          secretName: github-credentials
          items:
            - key: app_private_key
              path: key.pem
      - name: config
        configMap:
          name: config
      - name: job-config
        configMap:
          name: job-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tide
  namespace: default
  name: tide
spec:
  selector:
    app: tide
  ports:
  - name: main
    port: 80
    targetPort: 8888
    protocol: TCP
  - name: metrics
    port: 9090
    protocol: TCP
  type: ClusterIP
